# pdf-text-extractor

./: README.md  pdf-text-extractor.py  pyproject.toml  requirements.txt
