[project]
name = "pdf-text-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Vaenyx",email = "242270953+Vaenyx@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pdfplumber (>=0.11.9,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
